--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React Movies",
-  "name": "React Movies App",
+  "short_name": "SPA Project",
+  "name": "React SPA Project",
   "icons": [
     {
       "src": "favicon.ico",
